# lboot

./: .defconfig  .gitignore  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  lboot.cfg  lboot.cfg.example  stage1.mk  stage2.ld  stage2.mk
inc/: config.h  config.h.in  ctype.h  stddef.h  stdint.h  stdlib.h  string.h
inc/bios/: bios.h
inc/config/: config.h  config_types.h
inc/data/: fifo.h
inc/exec/: exec.h  multiboot.h  multiboot_types.h
inc/exec/fmt/: elf.h  elf_types.h  flat.h
inc/intr/: idt.h  interrupts.h  pic.h
inc/io/: input.h  ioport.h  output.h  serial.h  vga.h
inc/mm/: alloc.h
inc/storage/: bios.h  file.h  storage.h
inc/storage/fs/: fat.h  fs.h
inc/storage/protocol/: protocol.h  xmodem.h
inc/time/: pit.h  time.h
src/: module.mk
src/bios/: bios.c  bios.s  bios_asm.s  module.mk
src/config/: config.c  module.mk
src/data/: fifo.c  module.mk
src/exec/: exec.c  module.mk  multiboot.c
src/exec/fmt/: elf.c  flat.c  module.mk
src/intr/: idt.c  int_wrappers.s  interrupts.c  module.mk  pic.c
src/io/: module.mk  output.c  serial.c  vga.c
src/mm/: alloc.c  module.mk
src/startup/: cstart.c  module.mk  startup.s
src/stdlib/: ctype.c  module.mk  stdlib.c  string.c
src/storage/: bios.c  file.c  module.mk
src/storage/fs/: fat.c  fs.c  module.mk
src/storage/protocol/: module.mk  protocol.c  xmodem.c
src/time/: module.mk  pit.c  time.c
stage1/: Makefile  stage1.S  stage1.ld  stage1.s
stage1/inc/: read_sector.inc  read_sector_map.inc
tools/: lboot_prepare.sh
tools/sector_mapper/: .gitignore  Makefile
tools/sector_mapper/inc/: fat.h  sector_map.h
tools/sector_mapper/src/: fat.c  main.c
